[workspace]

members = [
    "projects/cmd/rgrep",
    "projects/cmd/server",
    "projects/cmd/city-pop",
    "projects/cmd/ping-pong",

    "projects/lib/lsmt",
    "projects/lib/thread_pool",

    "examples/serde_examples",
    "examples/env_examples",
    "examples/fs_examples",
    "examples/concurrence_examples",
    "examples/references_examples",
    "examples/grpc_examples",
]

exclude = ["playground", "templates", "pitfalls"]
