[package]
name = "map_reduce"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.8"
env_logger = "0.7.1"
maplit = "1.0.2"

grpcio = "0.5.1"
protobuf = "2.14.0"
futures = "0.1.29"

uuid = {version = "0.8.1", features = ["v4"]}
