[package]
name = "raft"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.8"
env_logger = "0.7.1"

grpcio = ""
protobuf = ""
futures = "0.1.29"

rand = "0.7.3"
