[package]
name = "raft"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.8"
rand = "0.8.2"

[dev-dependencies]

clap = "2.33.3"
env_logger = "0.8.2"
serde = { version="1.0.111", features=["derive"] }
serde_json = "1.0.55"
futures = "0.3.12"
grpcio = "0.7.1"
protobuf = "2.20.0"
