[package]
name = "kvs"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.0"
lsmt = { path = "../../../../rust/projects/lib/lsmt" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[dev-dependencies]

assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
walkdir = "2.2.9"
