[package]
name = "kvs"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.22.1"

lsmt = { path = "../../../../rust/projects/lib/lsmt" }

[dev-dependencies]

assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false
