[package]
name = "segment_io"
version = "0.1.0"
authors = ["yeluyang <ylycpg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.3.2"

[dev-dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
